Add back Java 8 support (#34)
* Add back support for Java 8

* Fix tests on Windows